// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Header should render a different name, prompt, and beta tag if provided 1`] = `
<div>
  <EuiTitle>
    <h1>
      <FormattedMessage
        defaultMessage="Create {indexPatternName}"
        id="kbn.management.createIndexPatternHeader"
        values={
          Object {
            "indexPatternName": "test index pattern",
          }
        }
      />
       
      <EuiBetaBadge
        label="Beta"
      />
    </h1>
  </EuiTitle>
  <EuiFlexGroup
    alignItems="flexEnd"
    justifyContent="spaceBetween"
  >
    <EuiFlexItem
      grow={false}
    >
      <EuiText
        size="s"
      >
        <p>
          <EuiTextColor
            color="subdued"
          >
            <FormattedMessage
              defaultMessage="Kibana uses index patterns to retrieve data from Elasticsearch indices for things like visualizations."
              id="kbn.management.createIndexPatternLabel"
              values={Object {}}
            />
          </EuiTextColor>
        </p>
      </EuiText>
    </EuiFlexItem>
  </EuiFlexGroup>
  <EuiSpacer
    size="s"
  />
  <div>
    Test prompt
  </div>
  <EuiSpacer
    size="m"
  />
</div>
`;

exports[`Header should render normally 1`] = `
<div>
  <EuiTitle>
    <h1>
      <FormattedMessage
        defaultMessage="Create {indexPatternName}"
        id="kbn.management.createIndexPatternHeader"
        values={
          Object {
            "indexPatternName": "test index pattern",
          }
        }
      />
    </h1>
  </EuiTitle>
  <EuiFlexGroup
    alignItems="flexEnd"
    justifyContent="spaceBetween"
  >
    <EuiFlexItem
      grow={false}
    >
      <EuiText
        size="s"
      >
        <p>
          <EuiTextColor
            color="subdued"
          >
            <FormattedMessage
              defaultMessage="Kibana uses index patterns to retrieve data from Elasticsearch indices for things like visualizations."
              id="kbn.management.createIndexPatternLabel"
              values={Object {}}
            />
          </EuiTextColor>
        </p>
      </EuiText>
    </EuiFlexItem>
  </EuiFlexGroup>
  <EuiSpacer
    size="m"
  />
</div>
`;

exports[`Header should render without including system indices 1`] = `
<div>
  <EuiTitle>
    <h1>
      <FormattedMessage
        defaultMessage="Create {indexPatternName}"
        id="kbn.management.createIndexPatternHeader"
        values={
          Object {
            "indexPatternName": "test index pattern",
          }
        }
      />
    </h1>
  </EuiTitle>
  <EuiFlexGroup
    alignItems="flexEnd"
    justifyContent="spaceBetween"
  >
    <EuiFlexItem
      grow={false}
    >
      <EuiText
        size="s"
      >
        <p>
          <EuiTextColor
            color="subdued"
          >
            <FormattedMessage
              defaultMessage="Kibana uses index patterns to retrieve data from Elasticsearch indices for things like visualizations."
              id="kbn.management.createIndexPatternLabel"
              values={Object {}}
            />
          </EuiTextColor>
        </p>
      </EuiText>
    </EuiFlexItem>
  </EuiFlexGroup>
  <EuiSpacer
    size="m"
  />
</div>
`;
